update tests and readme